Fix T58756: crash changing shading.type in 3D viewport in inactive screen.